fix: staff gap growed up on screens > 1900px

--- a/src/Pages/Parceiros/Parceiros.css
+++ b/src/Pages/Parceiros/Parceiros.css
@@ -53,6 +53,13 @@
     }
 }
 
+@media screen and (min-width: 1900px) {
+
+    .staff {
+        gap: 24rem;
+    }
+}
+
 @media screen and (max-width: 1366px) {
 
     .partnersTile {
